# fibra

./: .gitignore  Cargo.toml  HISTORY.md  README.md
benches/: benchmark.rs
examples/: echo.rs  hello.rs  hello_world.rs  https.rs  ipv6.rs  multisite.rs  response.rs  rewrite.rs  routing.rs  simple.rs  stream.rs
src/: bolt.rs  config.rs  consts.rs  context.rs  fibra.rs  general.rs  handler.rs  lib.rs  macros.rs  pattern.rs  router.rs  server.rs  traits.rs  types.rs  veloce.rs
src/addon/: catcher.rs  logger.rs  mod.rs  normalize.rs  reqid.rs  resource.rs
src/addons/: catcher.rs  closure.rs  cors.rs  domains.rs  filter.rs  logger.rs  matcher.rs  methods.rs  mod.rs  normalize.rs  public.rs  redirect.rs  reject.rs  rewrite.rs  router.rs  timeout.rs
src/core/: addon.rs  cache.rs  context.rs  define.rs  general.rs  handler.rs  mod.rs  route.rs  router.rs  server.rs  types.rs  veloce.rs
src/exts/: func.rs  method.rs  mod.rs  path.rs
src/filter/: func.rs  method.rs  mod.rs  path.rs
src/http/: codec.rs  cookie.rs  error.rs  header.rs  method.rs  mime.rs  mod.rs  request.rs  response.rs  status.rs
src/inner/: adapter.rs  catcher.rs  context.rs  convert.rs  general.rs  handler.rs  limiter.rs  matcher.rs  mod.rs  package.rs  replies.rs  routine.rs  storage.rs
src/kernel/: adapter.rs  address.rs  catcher.rs  closure.rs  context.rs  general.rs  handler.rs  limiter.rs  matcher.rs  mod.rs  package.rs  pattern.rs  routine.rs  storage.rs  wrapper.rs
src/limits/: domain.rs  host.rs  mod.rs  path.rs  verb.rs
src/plugin/: codec.rs  cors.rs  limiter.rs  logger.rs  mod.rs  public.rs  realip.rs  recover.rs  redirect.rs  reject.rs  rewrite.rs  timeout.rs
src/reply/: convert.rs  mod.rs
src/route/: adapter.rs  bolt.rs  catcher.rs  context.rs  handler.rs  limiter.rs  matcher.rs  mod.rs  package.rs  presets.rs  router.rs  routine.rs  service.rs  storage.rs
src/routes/: domains.rs  matcher.rs  methods.rs  mod.rs  router.rs
src/routing/: context.rs  route.rs  router.rs  storage.rs
src/types/: authority.rs  body.rs  connection.rs  cookie.rs  error.rs  header.rs  listener.rs  macros.rs  method.rs  mime.rs  mod.rs  redirect.rs  request.rs  response.rs  scheme.rs  status.rs  uri.rs  version.rs
