[package]
name = "fibra"
version = "0.1.0"
authors = ["Jian Chen <admin@chensoft.com>"]
edition = "2021"
description = "Fast and Powerful HTTP router written in Rust"
documentation = "https://docs.rs/fibra"
readme = "README.md"
repository = "https://github.com/chensoft/fibra"
license = "MIT"
keywords = ["fibra", "http", "router", "web", "server"]

[dependencies]
mime = "0.3"
tokio = { version = "1.35", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
logkit = "0.3"
chrono = "0.4"
socket2 = "0.5"
futures = "0.3"
indexmap = "2.2"
radixmap = "0.1"
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "playground"
harness = false

[[bench]]
name = "benchmark"
harness = false
