[package]
name = "fibra"
version = "0.2.0"
authors = ["Jian Chen <admin@chensoft.com>"]
edition = "2021"
description = "Fast and Powerful HTTP router written in Rust"
documentation = "https://docs.rs/fibra"
readme = "README.md"
repository = "https://github.com/chensoft/fibra"
license = "MIT"
keywords = ["fibra", "http", "router", "web", "server"]

[dependencies]
psl = "2.1"
mime = "0.3"
bytes = "1.6"
tokio = { version = "1.38", features = ["full"] }
hyper = { version = "1.3", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
logkit = "0.3"
encoder = "0.2"
socket2 = "0.5"
futures = "0.3"
indexmap = { version = "2.2", features = ["serde"] }
radixmap = "0.2"
thiserror = "1.0"
async-trait = "0.1"
futures-util = "0.3"
http-body-util = "0.1"
form_urlencoded = "1.2"

# todo make addon as a feature but enabled by default
ulid = "1.1"

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "playground"
harness = false

[[bench]]
name = "benchmark"
harness = false
